第三轮润色

--- a/Essays/如何写出好的提示：利用间隔重复来创造理解.md
+++ b/Essays/如何写出好的提示：利用间隔重复来创造理解.md
@@ -61,15 +61,15 @@ If a prompt “works,” it’s because performing that task changes you in some
 
 The most common mechanism of change for spaced repetition learning tasks is called *retrieval practice.* In brief: when you attempt to recall some knowledge from memory, the act of retrieval tends to reinforce those memories.[^3] You’ll forget that knowledge more slowly. With a few retrievals strategically spaced over time, you can effectively halt forgetting. The physical mechanisms are not yet understood, but hundreds of cognitive scientists have explored this effect experimentally, reproducing the central findings across various subjects, knowledge types (factual, conceptual, procedural, motor), and testing modalities (multiple choice, short answer, oral examination).
 
-间隔重复学习任务最常见的改变机制被称为**提取练习**。简而言之：当你试图从记忆中回忆一些知识时，提取行为往往会强化这些记忆。[^3]你会更慢地忘记这些知识。通过在一段时间内有策略地间隔几次提取，你可以有效地阻止遗忘。物理机制尚不清楚，但数百名认知科学家已经通过实验探索了这一效应，他们在不同的学科、知识类型（事实、概念、程序、运动）和测试方式（选择题、简答题、口试）上复现了中心发现。
+间隔重复学习任务最常见的改变机制被称为**提取练习**。简而言之：当你试图从记忆中回忆一些知识时，提取行为往往会强化这些记忆。[^3]你会更慢地忘记这些知识。通过一段时间内有策略地在几次提取之间加入间隔，你可以有效地阻止遗忘。物理机制尚不清楚，但数百名认知科学家已经通过实验探索了这一效应，他们在不同的学科、知识类型（事实、概念、程序、运动）和测试方式（选择题、简答题、口试）上复现了中心发现。
 
 The value of fluent recall isn’t just in memorizing facts. Many of these experiments tested students not with parroted memory questions but by asking them to make inferences, draw concept maps[^4], or answer open-ended questions. In these studies, improved recall translated into improved general understanding and problem-solving ability.
 
-流畅回忆的价值不仅仅在于记忆事实。许多实验不是用鹦鹉学舌式的记忆问题来测试学生，而是让他们进行推理，画概念图[^4]，或者回答开放式问题。在这些研究中，记忆的提高转化为整体理解和解决问题能力的提高。
+流畅回忆的价值不仅仅在于记忆事实。许多实验并不是用鹦鹉学舌式的记忆问题来测试学生，而是让他们进行推理，画概念图[^4]，或者回答开放式问题。在这些研究中，记忆的提高转化为整体理解和解决问题能力的提高。
 
 *Retrieval* is the key element which distinguishes this effective mode of practice from typical study habits. Simply *reminding* yourself of material (for instance by re-reading it) yields much weaker memory and problem-solving performance. The learning produced by retrieval is called the “testing effect” because it occurs when you explicitly test yourself, reaching within to recall some knowledge from the tangle of your mind. Such tests look like typical school exams, but in some sense they’re the opposite: retrieval practice is about testing your knowledge to *produce* learning, rather than to assess learning.
 
-**提取**是区分这种有效的练习方式与典型的学习习惯的关键因素。简单地「提醒」自己一些材料（比如重复阅读它）会让你的记忆和解决问题的能力变得更弱。由提取产生的学习被称为「测试效应」，因为它发生在你显性地测试自己，从你混乱的大脑中回忆一些知识的时候。这类测试看起来像典型的学校考试，但从某种意义上说，它们恰恰相反：提取练习是为了测试你的知识来**产生**学习，而不是评估学习。
+**提取**是区分这种有效练习方式与典型学习习惯的关键因素。简单地「提醒」自己一些材料（比如重复阅读它）会让你的记忆和解决问题的能力变得更弱。由提取产生的学习被称为「测试效应」，因为它发生在你显性地测试自己，从你混乱的大脑中回忆一些知识的时候。这类测试看起来像典型的学校考试，但从某种意义上说，它们恰恰相反：提取练习是为了测试你的知识来**产生**学习，而不是评估学习。
 
 Spaced repetition systems are designed to facilitate this effect. If you want prompts to reinforce your understanding of some topic, you must learn to write prompts which collectively invoke retrieval practice of all the key details.
 
@@ -81,7 +81,7 @@ We’ll have to step outside the scientific literature to understand how to writ
 
 This guide is an example of what Michael Nielsen and I have called a *mnemonic medium*[^5]. It exemplifies its own advice through spaced repetition prompts interleaved directly into the text. If you’re reading this, you’ve probably already used a spaced repetition system. This guide’s system, [Orbit](https://withorbit.com/), works similarly[^6]. But it has a deeper aspiration: by integrating expert-authored prompts into the reading experience, authors can write texts which readers can deeply internalize with relatively little effort. If you’re an author, then, this guide may help you learn how to write good prompts both for your personal practice and also for publications you write using [Orbit](https://withorbit.com/). You can of course read this guide without answering the embedded prompts, but I hope you’ll give it a try.
 
-本指南是 Michael Nielsen 和我所称的**助记媒介**[^5]的一个例子。它通过直接插入到文本中的间隔重复卡片[^Jarrett 1]来举例说明自己的建议。如果你正在阅读这篇文章，你可能已经使用过间隔重复系统。本指南的系统 [Orbit](https://withorbit.com/) 的工作原理与此类似[^6]。但它还有一个更深层次的愿望：通过将专家撰写的卡片整合到阅读体验中，作者可以写出让读者付出相对较少努力就能深刻内化的文本。如果你是一名作者，那么本指南可能会帮助你学习如何为你的个人实践和你使用 [Orbit](https://withorbit.com/) 撰写的出版物编写好卡片。当然，你可以阅读本指南，而不需要回答嵌入的卡片，但我希望你能试一试。
+本指南是 Michael Nielsen 和我所称的**助记媒介**[^5]的一个例子。它通过直接插入到文本中的间隔重复卡片[^Jarrett 1]来举例说明自己的建议。如果你正在阅读这篇文章，你可能已经使用过间隔重复系统。本指南的系统 [Orbit](https://withorbit.com/) 的工作原理与此类似[^6]。但它还有一个更深层次的愿望：通过将专家撰写的卡片整合到阅读体验中，作者可以写出让读者付出相对较少努力就能深刻内化的文本。如果你是一名作者，那么本指南可能会帮助你学习如何为你的个人实践和你使用 [Orbit](https://withorbit.com/) 撰写的出版物写出好卡片。当然，你可以阅读本指南，而不需要回答嵌入的卡片，但我希望你能试一试。
 
 These embedded prompts are part of an ongoing research project. The first experiment in the mnemonic medium was *[Quantum Country](https://quantum.country/)*, a primer on quantum computation. Quantum Country is concrete and technical: definitions, notation, laws. By contrast, this guide mostly presents heuristics, mental models, and advice. The embedded prompts therefore play quite different roles in these two contexts. You may not need to memorize precise definitions here, but I believe the prompts will help you internalize the guide’s ideas and put them into action. On the other hand, this guide’s material may be too contingent and too personal to benefit from author-provided prompts. It’s an experiment, and I invite you to [tell me about your experiences](mailto:andy@andymatuschak.org).
 
@@ -95,7 +95,7 @@ One important limitation is worth noting. This guide describes how to write prom
 
 Writing good prompts feels surprisingly similar to translating written text. When translating prose into another language, you’re asking: which words, when read, would light a similar set of bulbs in readers’ minds? It’s not a rote operation. If the passage involves allusion, metaphor, or humor, you won’t translate literally. You’ll try to find words which recreate the experience of reading the original for a member of a foreign culture.
 
-编写好卡片与翻译书面文本的感觉惊人地相似。当把散文翻译成另一种语言时，你会问：哪些词在阅读时，会点亮读者头脑中类似的一组灯泡？这不是死记硬背。如果这篇文章涉及典故、隐喻或幽默，你就不会逐字翻译。你将试图找到一些词汇，为外国文化的成员重现阅读原著的经历。
+写出好卡片与翻译书面文本的感觉惊人地相似。当把散文翻译成另一种语言时，你会问：哪些词在阅读时，会点亮读者头脑中类似的一组灯泡？这不是死记硬背。如果这篇文章涉及典故、隐喻或幽默，你就不会逐字翻译。你将试图找到一些词汇，为外国文化的成员重现阅读原著的经历。
 
 When writing spaced repetition prompts meant to invoke retrieval practice, you’re doing something similar to language translation. You’re asking: which tasks, when performed in aggregate, require lighting the bulbs which are activated when you have that idea “fully loaded” into your mind?
 
@@ -107,7 +107,7 @@ The retrieval practice mechanism implies some core properties of effective promp
 
 These properties aren’t laws of nature. They’re more like rules you might learn in an English class. Good writers can (and should!) strategically break the rules of grammar to produce interesting effects. But you need to have enough experience to understand *why* doing something different makes sense in a given context.
 
-这些特点不是自然规律。它们更像是你可能在英语课上学到的规则。优秀的作家可以（也应该！）策略性地打破语法规则，产生有趣的效果。但是你需要有足够的经验来理解**为什么**在特定的环境下做一些不同的事情是有意义的。
+这些特点不是自然法则。它们更像是你可能在英语课上学到的规则。优秀的作家可以（也应该！）策略性地打破语法规则，产生有趣的效果。但是你需要有足够的经验来理解**为什么**在特定的环境下做一些不同的事情是有意义的。
 
 Retrieval practice prompts should be **focused.** A question or answer involving too much detail will dull your concentration and stimulate incomplete retrievals, leaving some bulbs unlit. Unfocused questions also make it harder to check whether you remembered all parts of the answer and to note places where you differed. It’s usually best to focus on one detail at a time.
 
@@ -119,7 +119,7 @@ Retrieval practice prompts should be **precise** about what they’re asking for
 
 Retrieval practice prompts should produce **consistent** answers, lighting the same bulbs each time you perform the task. Otherwise, you may run afoul of an interference phenomenon called “retrieval-induced forgetting”[^7]: what you remember during practice is reinforced, but other related knowledge which you *didn’t* recall is actually inhibited. Now, there is a useful type of prompt which involves generating new answers with each repetition, but such prompts leverage a different theory of change. We’ll discuss them briefly later in this guide.
 
-提取练习卡片应该产生**一致**的答案，每次执行任务时都会亮起相同的灯泡。否则，你可能会遇到一种被称为「提取诱导遗忘」[^7]的干扰现象：你在练习中记住的东西会得到加强，但你没有记住的其他相关知识实际上是被抑制的。现在，有一种有用的卡片类型，每次重复都会产生新的答案，但这种卡片利用了不同的变化理论。我们稍后将在本指南中简要讨论它们。
+提取练习卡片应该产生**一致的**答案，每次执行任务时都会亮起相同的灯泡。否则，你可能会遇到一种被称为「提取诱导遗忘」[^7]的干扰现象：你在练习中记住的东西会得到加强，但你没有记住的其他相关知识实际上是被抑制的。现在，有一种有用的卡片类型，每次重复都会产生新的答案，但这种卡片利用了不同的变化理论。我们稍后将在本指南中简要讨论它们。
 
 Retrieval practice prompts should be **tractable**. To avoid interference-driven churn and recurring annoyance in your review sessions, you should strive to write prompts which you can almost always answer correctly. This often means breaking the task down, or adding cues.[^8]
 
@@ -167,11 +167,11 @@ At a decent restaurant, even simple foods often taste much better than most home
 
 Stock is made by simmering flavorful ingredients in water. By varying the ingredients, we can produce different types of stock: chicken stock, vegetable stock, mushroom stock, pork stock, and so on. But unlike a typical broth, stock isn’t meant to have a distinctive flavor that can stand on its own. Instead, its job is to provide a versatile foundation for other preparations.
 
-高汤是用水炖调味料制成的。通过不同的原料，我们可以生产不同类型的高汤：鸡肉高汤、蔬菜高汤、蘑菇高汤、猪肉高汤等等。但与典型的肉汤不同，高汤并不意味着有一种可以独立存在的独特味道。相反，它的工作是为其他准备工作提供一个全面的基础。
+高汤是用水炖调味料制成的。改变不同的原料，我们可以制作不同类型的高汤：鸡肉高汤、蔬菜高汤、蘑菇高汤、猪肉高汤等等。但与典型的肉汤不同，高汤并不意味着有一种可以独立存在的独特味道。相反，它的工作是为其他准备工作提供一个全面的基础。
 
 One of the most useful stocks is chicken stock. When used to prepare vegetables, chicken stock doesn’t make them taste like chicken: it makes them taste more savory and complete. It also adds a luxurious texture because it’s rich in gelatin from the chicken bones. Chicken stock takes only a few minutes of active time to make, and in a typical kitchen, it’s basically free: the primary ingredient is chicken bones, which you can naturally accumulate in your freezer if you cook chicken regularly.
 
-鸡肉高汤是最有用的高汤之一。当用来准备蔬菜时，鸡肉高汤并不会让它们吃起来像鸡肉：它会让它们吃起来更美味、更完整。它还增加了奢华的质地，因为它含有丰富的鸡骨明胶。制作鸡肉高汤只需要几分钟的活跃时间，在典型的厨房里，它基本上是免费的：主要配料是鸡骨，如果你经常煮鸡肉，你可以自然地把鸡骨堆积在冰箱里。
+鸡肉高汤是最有用的高汤之一。当用来准备蔬菜时，鸡肉高汤并不会让它们吃起来像鸡肉：它会让它们吃起来更美味、更完整。它还增加了浓郁的口感，因为它含有丰富的鸡骨明胶。制作鸡肉高汤只需要几分钟的活跃时间，在典型的厨房里，它基本上是免费的：主要配料是鸡骨，如果你经常煮鸡肉，你可以自然地把鸡骨堆积在冰箱里。
 
 ### Recipe 菜谱
 
@@ -254,7 +254,7 @@ To organize our efforts, it’s helpful to ask: what would it mean to “know”
 - 知道如何制作和储存鸡肉高汤
 - 知道什么是鸡肉高汤，并（至少是浅显地）理解为什么和什么时候它很重要
 - 明确地知道鸡肉高汤的作用和意义
-- 知道使用鸡汤的一些方法，包括一般的和一些具体的例子
+- 知道使用鸡肉高汤的一些方法，包括一般的和一些具体的例子
 - 知道一些常见变体以及何时可以使用它们
 
 Some of this knowledge is factual; some of it is procedural; some of it is conceptual. We’ll see strategies for dealing with each of these types of knowledge.
@@ -291,7 +291,7 @@ This type of knowledge is mostly *factual*. There aren’t a lot of concepts or 
 
 We could write a prompt which simply asks: “What do you need to make chicken stock?” But this isn’t *precise* enough: should we recall the quantities or just the names of the ingredients? How much chicken stock are we making? This isn’t *focused* enough: because it’s asking for so many details simultaneously, it’s unlikely to sharply activate all the memories you want to reinforce. And because it’s asking for so much, it’s liable to lead to *inconsistency* and *intractability*: each time you answer, you’ll remember some details and forget others. The inconsistent activations will tend to erode your memory.
 
-我们可以写一个卡片，简单地问一下：「制作鸡肉高汤需要什么？」 但这还不够**准确**：我们应该回忆一下数量还是只回忆一下原料的名称？我们要做多少鸡肉高汤？这还不够**聚焦**：因为它同时要求这么多细节，所以不太可能急剧激活你想强化的所有记忆。而且，因为它要求的东西太多，所以很容易导致**不一致**和**不稳定**：每次你回答的时候，你会记住一些细节，而忘记其他细节。不一致的激活将倾向于侵蚀你的记忆。
+我们可以写一张卡片，简单地问一下：「制作鸡肉高汤需要什么？」 但这还不够**准确**：我们应该回忆一下数量还是只回忆一下原料的名称？我们要做多少鸡肉高汤？这还不够**聚焦**：因为它同时要求这么多细节，所以不太可能急剧激活你想强化的所有记忆。而且，因为它要求的东西太多，所以很容易导致**不一致**和**不稳定**：每次你回答的时候，你会记住一些细节，而忘记其他细节。不一致的激活将倾向于侵蚀你的记忆。
 
 We’ll need to break the ingredients list down into the elements which must actually be learned.
 
@@ -311,11 +311,11 @@ The first line is about the chicken component. If you’d never heard of stock b
 
 This question focuses on just one detail. It’s precise about what it wants (“What type of chicken parts…?”), and it should produce a consistent answer over time. It’s plenty tractable, but it still demands the effort of retrieving the answer from memory.
 
-这个问题只集中在一个细节上。它对它想要的东西很精确（「鸡的哪个部分......？」），而且它应该在一段时间内产生一个一致的答案。这个问题很容易解决，但是它仍然需要努力从记忆中提取出答案。
+这个问题只聚焦在一个细节上。它对它想要的东西很精确（「鸡的哪个部分......？」），而且它应该在一段时间内产生一个一致的答案。这个问题很容易解决，但是它仍然需要努力从记忆中提取出答案。
 
 Writing a simple factual prompt like that naturally tickles a neighbor you might consider adding: the *explanation* prompt. I write prompts like this when a detail seems likely to be challenging or when the explanation itself is interesting. A more experienced cook likely wouldn’t bother with the first question, but they might still find this one useful.
 
-编写这样一个简单的事实性卡片，自然会勾起你可能考虑添加的邻居：**解释**卡片。当一个细节似乎很有挑战性，或者解释本身很有趣时，我就写这样的卡片。一个更有经验的厨师可能不会理会第一个问题，但他们可能仍然会发现这个问题很有用：
+编写这样一张简单的事实性卡片，自然会勾起你可能考虑添加的邻居：**解释**卡片。当一个细节似乎很有挑战性，或者解释本身很有趣时，我就写这样的卡片。一个更有经验的厨师可能不会理会第一个问题，但他们可能仍然会发现这个问题很有用：
 
 > Q. Why do we use bones to make chicken stock?
 >
@@ -335,7 +335,7 @@ Note that the answer is found in a different section of the text! Writing prompt
 
 Now, this explanation prompt is a good first try, but it could be more precise. It would be reasonable to answer “Why do we use bones to make chicken stock?” with “Because bones are economical.” You want to write questions which cause you to unambiguously retrieve the information you have in mind. This more precise prompt is better:
 
-现在，这个解释卡片是一个很好的初步尝试，但它可以更精确。用「因为骨头很经济」来回答「什么我们做鸡肉高汤要用骨头？」是合理的。你想写的问题要能使你毫不含糊地提取到你心中的信息。这种更精确的卡片比较好：
+现在，这张解释卡片是一个很好的初步尝试，但它可以更精确。用「因为骨头很经济」来回答「什么我们做鸡肉高汤要用骨头？」是合理的。你想写的问题要能使你毫不含糊地提取到你心中的信息。这种更精确的卡片比较好：
 
 > Q. How do bones produce a chicken stock’s rich texture?
 >
@@ -347,7 +347,7 @@ Now, this explanation prompt is a good first try, but it could be more precise. 
 
 You may notice that one of the prompts in this review set doesn’t satisfy the consistency property. That prompt isn’t trying to engage retrieval practice, at least not like we’ve seen so far. Perhaps it doesn’t work very well—such prompts are a bit of an experiment! We’ll discuss them more later.
 
-你可能会注意到，这组复习集中的一张卡片不满足一致性特点。这张卡片并不是要参与提取练习，至少不像我们目前看到的那样。也许它的效果不是很好，这样的卡片有点像一个实验！我们稍后会进一步讨论它们。
+你可能会注意到，这组复习集里有张卡片不满足一致性的特点。这张卡片并不是要参与提取练习，至少不像我们目前看到的那样。也许它的效果不是很好，这样的卡片有点像一个实验！我们稍后会进一步讨论它们。
 
 ### Lists 列表
 
@@ -377,7 +377,7 @@ From here, we might ask:
 
 But unless you’re an experienced cook, you’ll probably find this prompt intractable, or you may remember ingredients inconsistently. Unordered lists like this can be challenging to translate into good prompts.
 
-但是，除非你是一个有经验的厨师，否则你可能会发现这个卡片很难处理，或者你可能记得原料不一致。像这样的无序列表，要转化为好卡片是很有挑战性的。
+但是，除非你是一个有经验的厨师，否则你可能会发现这个卡片很难处理，或者你可能记得的原料不一致。像这样的无序列表，要转化为好卡片是很有挑战性的。
 
 One good strategy is to create a set of questions which require you to fill in a missing element of the list:
 
@@ -441,7 +441,7 @@ Most spaced repetition software a has special function which can rapidly generat
 
 Ultimately, of course, you want to be able to recall all the ingredients on demand, not just one. Much of the time, these single-element deletions will be enough to achieve that goal. But with complex ideas, you may find you need to add integrative prompts after you’ve thoroughly practiced their discrete components. In the case of lists, you can imagine that the system could ask you to fill in more blanks simultaneously as your memory of the individual entries improves. I don’t know of any general memory system which does that, but it seems worth trying. This is one example of a general opportunity to incorporate more sophisticated knowledge modeling into these systems.
 
-当然，归根结底，你希望能够按要求回忆起所有的原料，而不是只有一种。很多时候，这些单元素的挖空就足以实现这一目标。但对于复杂的想法，你可能会发现你需要在彻底练习了它们的独立原料后再增加综合卡片。在列表的情况下，你可以想象，随着你对单个条目记忆的加深，系统可以要求你同时填更多的空。我不知道有什么一般的记忆系统能做到这一点，但这似乎值得尝试。这是一个将更复杂的知识建模纳入这些系统的一般机会的例子。
+当然，归根结底，你希望能够按要求回忆起所有的原料，而不是只有一种。很多时候，这些单元素的挖空就足以实现这一目标。但对于复杂的想法，你可能会发现你需要在彻底练习了它们的独立成分后再增加综合卡片。在列表的情况下，你可以想象，随着你对单个条目记忆的加深，系统可以要求你同时填更多的空。我不知道有什么一般的记忆系统能做到这一点，但这似乎值得尝试。这是一个将更复杂的知识建模纳入这些系统的一般机会的例子。
 
 Another way to help yourself understand lists like this is to write explanation prompts for each of the components: A quick answer: carrot provides vegetal sweetness; like salt, this sugar brightens other flavors.*why* is carrot a good aromatic for chicken stock? If you know the answer to this question for each ingredient, you’ll have an easier time generating the list on demand, perhaps without any of the cloze deletions. And as with simple facts, explanations make knowledge more meaningful. In this case, the recipe doesn’t say, so you’d need to do some research to write questions of this kind.
 
@@ -507,7 +507,7 @@ But make sure the cue doesn’t render the prompt trivial: it’s important that
 
 This prompt doesn’t require you to retrieve any knowledge about chicken stock: there’s only one vegetable which rhymes with “parrots.” You could answer this without having ever read the recipe. By contrast, the previous prompt’s cue—“herb”—leaves your memory with work to do. There are many herbs, and you’ll still need to remember which one the recipe specified.
 
-这个卡片不要求你提取任何有关鸡汤的知识：只有一种蔬菜与「鹦鹉」押韵。你可以不看菜谱就回答这个问题。相比之下，前一个卡片的线索——「草药」——让你的记忆有了更多的工作要做。有许多草药，你仍然需要记住菜谱上指定的哪一种。
+这个卡片不要求你提取任何有关鸡汤的知识：只有一种蔬菜与「鹦鹉」押韵。你可以不看菜谱就回答这个问题。相比之下，前一张卡片的线索——「草药」——让你的记忆有了更多的工作要做。有许多草药，你仍然需要记住菜谱上指定的是哪一种。
 
 That said, “rhymes with parrots” may be a useful mnemonic device to add to the *answer*, offering an association to help you in the future:
 
@@ -547,7 +547,7 @@ Putting these mnemonic devices in the answer field is a useful general trick whe
 
 This particular prompt is unlikely to require any extra help, but if you really find yourself struggling, you can add a prompt specifically intended to reinforce the association:
 
-这个特殊的卡片不太可能需要任何额外的帮助，但是如果你真的发现自己在挣扎，你可以增加一个专门用于加强联想的卡片：
+这张特殊的卡片不太可能需要任何额外的帮助，但是如果你真的发现自己在挣扎，你可以增加一张专门用于加强联想的卡片：
 
 > Q. Mnemonic device for carrots in chicken stock?
 >
@@ -559,7 +559,7 @@ This particular prompt is unlikely to require any extra help, but if you really 
 
 Instead of fabricating a mnemonic device, you can also leverage elaborative encoding by adding imagery to your prompts. The same fill-in-the-blank idea applies quite well to images. You’d probably find this prompt much easier to remember over time than its textual equivalent:
 
-你也可以通过在卡片中加入图像来利用精心设计的编码，而不是编造一条助记。同样的填空想法也很适用于图像。你可能会发现这个卡片比它的文字内容更容易记住：
+你也可以通过在卡片中加入图像来利用精心设计的编码，而不是编造一条助记。同样的填空想法也很适用于图像。你可能会发现这张卡片比它的文字内容更容易记住：
 
 > Q. Chicken stock ingredients:
 >
@@ -575,7 +575,7 @@ Instead of fabricating a mnemonic device, you can also leverage elaborative enco
 
 Of course, cues and elaborative encoding add extra effort. You don’t need to use them all the time: you’d probably find that exhausting. But they’re useful techniques to deploy if you suspect a prompt will prove difficult to remember, or if you’ve noticed yourself struggling in practice.
 
-当然，线索和精心设计的编码会增加额外的努力。你不需要一直使用它们：你可能会觉得很累。但是，如果你怀疑一个卡片难以记住，或者你注意到自己在实践中的挣扎，那么它们就是有用的技术。
+当然，线索和精心设计的编码会增加额外的努力。你不需要一直使用它们：你可能会觉得很累。但是，如果你怀疑某张卡片难以记住，或者你注意到自己在实践中的挣扎，那么它们就是有用的技术。
 
 ### Interpretation; the “more than you think” rule of thumb 解释；「比你想象的要多」的经验法则
 
@@ -629,7 +629,7 @@ Notice how I’ve broken the ingredient list down into many questions here, each
 
 Prompts are cheaper than you probably imagine. An easy prompt will consume 10–30 seconds across the entire first year of practice, and much less in each subsequent year. Until you’ve internalized that observation, try to adopt this rule of thumb: write more prompts than feels natural.
 
-卡片比你可能想象的要便宜。一个简单的卡片在整个第一年的练习中会花 10-30 秒的时间，而在随后的每一年则会少很多。在你内化这一观察结果之前，试着采用这一经验法则：编写超出感觉自然的卡片数量。
+卡片比你可能想象的要便宜。一张简单的卡片在整个第一年的练习中会花 10-30 秒的时间，而在随后的每一年则会少很多。在你内化这一观察结果之前，试着采用这一经验法则：编写超出感觉自然的卡片数量。
 
 Now, prompts are cheap, but they’re not *free.* Besides their time cost, they have an emotional cost: no one wants to spend time reviewing a bunch of boring material they already know. So if you’re writing prompts for a subject that’s already quite familiar, you should use fewer prompts—not because it’s always safe to write coarser questions for familiar topics, but because there’s less marginal knowledge you need to capture.
 
@@ -637,7 +637,7 @@ Now, prompts are cheap, but they’re not *free.* Besides their time cost, they 
 
 For example, you may notice that I haven’t written prompts about how the ingredients are to be prepared before they’re added to the stock. No need, I feel: roughly chopping vegetables and smashing garlic before using those ingredients as aromatics is the natural inference for most cooks who are serious enough to make stock. But if that’s not a trivial inference for you, prompt away.
 
-例如，你可能会注意到，我没有写关于在向高汤中添加原料之前如何准备的卡片。没有必要，我觉得：在使用这些原料作为佐料之前，粗略地切碎蔬菜和捣碎大蒜是大多数认真做汤的厨师的自然推断。但是，如果这对你来说不是一个微不足道的推论，那就卡片吧。
+例如，你可能会注意到，我没有写关于在向高汤中添加原料之前如何准备的卡片。我觉得没有必要：在使用这些原料作为佐料之前，粗略地切碎蔬菜和捣碎大蒜是大多数认真做汤的厨师的自然推断。但是，如果这对你来说不是一个微不足道的推论，那就写卡片吧。
 
 Relatedly, the appropriate scale of a “focused” prompt depends on the scale of the concepts you’ve internalized. This particular set of aromatics is so deeply familiar as a group that I’d write prompts which treat it as a unit (“Italian aromatics”) instead of memorizing individual ingredients and quantities.
 
@@ -645,7 +645,7 @@ Relatedly, the appropriate scale of a “focused” prompt depends on the scale 
 
 As you build fluency in increasingly complex concepts, you can write increasingly complex prompts while keeping each focused on what feels like a single detail. In fact, the ability to think in terms of increasingly complex “chunks” appears to be a significant part of what expertise actually is.[^12] Viewed through this lens, one role for memory systems is to accelerate the process of increasing your effective chunk size in a topic.
 
-随着你对越来越复杂的概念的熟练掌握，你可以写出越来越复杂的卡片，同时使每个卡片都集中在感觉上是一个单一的细节。事实上，用越来越复杂的「组块」来思考的能力似乎是专业知识的重要组成部分。[^12]从这个角度来看，记忆系统的一个作用是加速增大你在一个主题中的有效组块的大小。
+随着你对越来越复杂的概念的熟练掌握，你可以写出越来越复杂的卡片，同时使每张卡片都集中在感觉上是一个单一的细节。事实上，用越来越复杂的「组块」来思考的能力似乎是专业知识的重要组成部分。[^12]从这个角度来看，记忆系统的一个作用是加速增大你在一个主题中的有效组块的大小。
 
 ### Procedural knowledge 程序性知识
 
@@ -689,7 +689,7 @@ This is an awfully unfocused prompt. It includes many unimportant details which 
 
 We can improve this prompt somewhat by simply removing words. If necessary, we can add extra prompts to cover any details we removed.
 
-我们可以通过简单地删除文字来在一定程度上改进这个卡片。如果有必要，我们可以增加额外的卡片，以涵盖我们删除的任何细节。
+我们可以通过简单地删除文字来在一定程度上改进这张卡片。如果有必要，我们可以增加额外的卡片，以涵盖我们删除的任何细节。
 
 > Q:
 >
@@ -791,7 +791,7 @@ This knowledge isn’t essential, but “heads-up!”-type information can be qu
 
 Explanation-type prompts are especially valuable when studying procedures: they can help you avoid rote learning and build a deeper understanding. Note that in this particular case, we were only able to traverse one level of “why.” Why low heat? A cleaner flavor, says the recipe. Why does low heat produce a cleaner flavor? It doesn’t say. You might find yourself wondering what “brighter” or “cleaner” really even means. Writing this prompt revealed a gap in our understanding: how useful! We could dig into this question, but we’ll choose to keep moving for the moment. We indicate that by explicitly phrasing the answer as tentative, reliant on an external claim.
 
-在学习程序时，解释型的卡片特别有价值：它们可以帮助你避免死记硬背，建立更深刻的理解。请注意，在这个特定的案例中，我们只能够穿越「为什么」的一个层次。为什么要小火？菜谱上说，是为了使味道更干净。为什么小火能产生更干净的味道？它没有说。你可能会发现自己想知道「更亮」或「更干净」到底是什么意思。写下这个卡片后，我们发现了一个理解上的差距：多么有用啊！我们可以深入研究这个问题，但是，我们不知道该怎么做。我们可以挖掘这个问题，但我们会选择暂时继续前进。我们通过明确地将答案表述为暂定的，依赖于外部的主张来表明这一点。
+在学习程序时，解释型的卡片特别有价值：它们可以帮助你避免死记硬背，建立更深刻的理解。请注意，在这个特定的案例中，我们只能够穿越「为什么」的一个层次。为什么要小火？菜谱上说，是为了使味道更干净。为什么小火能产生更干净的味道？它没有说。你可能会发现自己想知道「更亮」或「更干净」到底是什么意思。写下这张卡片后，我们发现了一个理解上的差距：多么有用啊！我们可以深入研究这个问题，但是，我们不知道该怎么做。我们可以挖掘这个问题，但我们会选择暂时继续前进。我们通过明确地将答案表述为暂定的，依赖于外部的主张来表明这一点。
 
 It’s helpful to add similar caveats to your prompts whenever you’re working with subjective, provisional, or incomplete information. In some sense, most of the prompts we’ve been writing are provisional: other recipes will probably do things somewhat differently. So we could phrase everything more tentatively, but in practice that’s more distracting than it’s worth. It’s usually enough to record where the information came from. Most spaced repetition systems have metadata fields you could use to link these prompts to the original chicken stock recipe.
 
@@ -807,9 +807,25 @@ This will yield about 1.5 qt. Chicken stock will keep for a week in the fridge o
 
 这将产生大约 1.5 夸脱鸡汤在冷藏里可以保存一个星期，或在冷冻里无限期地保存。冷藏后，鸡肉高汤上会有一层脂肪，在使用鸡肉高汤前请将其撇去，并在任何美味的烹饪情况下用脂肪代替油或黄油。
 
-You can use this text box as a scratch area. What you write won’t be transmitted or saved.
+<hr>
 
-你可以把这个文本框作为一个草稿区。你写的东西不会被发送或保存。
+给
+
+你
+
+一
+
+炷
+
+香
+
+的
+
+时
+
+间
+
+<hr>
 
 Here are my prompts:
 
@@ -857,15 +873,15 @@ Here are my prompts:
 >
 > 问：冷却后，在使用新的一批鸡肉高汤之前，我应该做什么？
 >
-> 答：去除脂肪的盖子
+> 答：刮除表层的脂肪
 >
-> 问：我应该如何处理鸡肉高汤中的脱脂？
+> 问：我应该如何处理从鸡肉高汤中刮除的脂肪？
 >
 > 答：保留并作为咸味烹饪油脂使用。
 
 How do these prompts compare to yours? Did I include any details you didn’t cover? Did you cover any details I missed? How do those differences strike you? How does the scope of your prompts compare to these?
 
-这些卡片与你的卡片相比如何？我是否包括了你没有涉及的任何细节？你是否涵盖了我遗漏的任何细节？这些差异对你有什么影响？你的卡片的范围与这些相比如何？
+这些卡片与你的卡片相比如何？我是否包括了你没有涉及的任何细节？你是否涵盖了我遗漏的任何细节？这些差异对你有什么影响？你的卡片的规模与这些相比如何？
 
 ## What stock is and why it matters: conceptual knowledge 高汤是什么，为什么重要：概念性知识
 
