翻译 传统的间隔重复记忆卡片是原子化的

--- a/ToolsForThought/传统的间隔重复记忆卡片是原子化的.md
+++ b/ToolsForThought/传统的间隔重复记忆卡片是原子化的.md
@@ -1,19 +1,11 @@
-# Traditional spaced repetition memory prompts are atomized
-
 # 传统的间隔重复记忆卡片是原子化的
 
-The prompts in a [Spaced repetition memory system](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC) are an unordered, unstructured set. Each prompt is intentionally quite fine-grained and atomic, since that’s what seems to work best for effective memorization. But this lack of structure creates a feeling of wandering through a forest, able to see only one leaf at a time.
+原文：[Traditional spaced repetition memory prompts are atomized](https://notes.andymatuschak.org/z4w269svvGhA2H5XFr6geaBbPTrxtJRpjt5TE)
 
-在[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)中的卡片是一个无序的、无结构的集合。每一张卡片都是有意的细化和原子化的，因为这似乎是有效记忆的最佳方式。但是，这种缺乏结构的做法造成了一种在森林中徘徊的感觉，每次只能看到一片叶子。
+那些在[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)中的卡片是一个无序的、无结构的集合。每一张卡片都被有意地细粒化和原子化，因为这似乎是有效记忆的最佳方式。但是，结构的缺失导致我们只见树叶，不见森林。
 
-In some domains, this type of atomization is appropriate. For instance, if you’re studying hiragana, or a large set of foreign-language vocabulary, the inter-prompt structure may not be terribly meaningful—you really do have a huge sack of atoms to memorize.
+在某些领域，这种类型的原子化是合适的。例如，如果你在学习平假名，或大量外语词汇，知识之间的结构可能并没有什么特别的意义——你确实有一大袋原子知识需要记忆。
 
-在某些领域，这种类型的原子化是合适的。例如，如果你在学习平假名，或一大套外语词汇，提示语之间的结构可能并没有很大的意义--你确实有一大袋原子需要记忆。
+但是在其他领域——比如物理学或数学——原子知识只有作为整体结构的一部分才有意义。当这些领域的卡片效果很好时，我怀疑这是因为它们与复习者头脑中一些无形的、更广泛的结构建立了联系。
 
-But in other domains—say, physics or math—the atoms only have meaning as part of a broader structure. When prompts in these domains work well, I suspect it’s because they’re hanging on some invisible, broader structure that’s already in the reviewer’s head.
-
-但是在其他领域——比如物理学或数学——原子只有作为更广泛的结构的一部分才有意义。当这些领域的提示语运作良好时，我怀疑是因为它们挂在审查者头脑中的一些无形的、更广泛的结构上。
-
-This atomization is the primary reason that [Spaced repetition memory prompts alone are a poor communications medium](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe). It also limits their suitability for long-term personal notes: [Existing spaced repetition systems discourage evergreen notes](https://notes.andymatuschak.org/zZuqUv3XNEFsimMmHszLF87Pr5vTraLjL5Y).
-
-这种原子化是[单独的间隔重复记忆卡片是一种糟糕的交流媒介](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe)的主要原因。这也限制了它们对长期个人笔记的适用性：[现有的间隔复述系统不鼓励常青笔记](https://notes.andymatuschak.org/zZuqUv3XNEFsimMmHszLF87Pr5vTraLjL5Y)。
+这种原子化是[单独的间隔重复记忆卡片是一种糟糕的交流媒介](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe)的主要原因。这也限制了它们对长期个人笔记的适用性：[现有的间隔重复系统阻碍常青笔记](https://notes.andymatuschak.org/zZuqUv3XNEFsimMmHszLF87Pr5vTraLjL5Y)。
