--- a/ToolsForThought/写好间隔重复记忆卡片很难.md
+++ b/ToolsForThought/写好间隔重复记忆卡片很难.md
@@ -10,7 +10,7 @@
 - 简洁
 - 找到主题中真正重要的内容，而不仅仅是容易记忆的内容
 
-更多信息，请参见：[优质间隔重复记忆卡片最重要的属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)
+更多信息，请参见：[高质量的间隔重复记忆卡片最重要的属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)
 
 ## 这比人们想象的要难
 
