--- a/ToolsForThought/在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系.md
+++ b/ToolsForThought/在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系.md
@@ -8,11 +8,11 @@ Many researchers are trying to make a more efficient [Spaced repetition memory s
 
 Part of this is writing good prompts: [What are the most important attributes of good spaced repetition memory prompts?](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ). But this isn’t enough. Review sessions need ongoing grooming to stay interesting. If you don’t add anything new for a while, your sessions will feel stale: [Spaced repetition review sessions often become boring and detached without a steady stream of new prompts](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz). If you often forget an answer, you must refactor the question or risk future eye-rolls.
 
-其中的一部分是写好的提示语。[好的间隔重复记忆卡片的最重要属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)。但这还不够。复习环节需要不断梳理，以保持趣味性。如果你有一段时间没有添加新的东西，你的复习环节就会感到陈旧：[如果没有源源不断的新提示，间隔重复的复习课往往会变得枯燥无味和脱离实际](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)。如果你经常忘记一个答案，你就必须重新构思问题，否则就有可能被人看扁。
+其中的一部分是写好的提示语。[高质量的间隔重复记忆卡片的最重要属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)。但这还不够。复习环节需要不断梳理，以保持趣味性。如果你有一段时间没有添加新的东西，你的复习环节就会感到陈旧：[如果没有源源不断的新卡片，间隔重复的复习环节往往会变得枯燥无味和脱离实际](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)。如果你经常忘记一个答案，你就必须重新构思问题，否则就有可能被人看扁。
 
 For me, the most important type of maintenance concerns my shifting interests. I might stumble on a fascinating paper and write a few dozen prompts to help me internalize the details. Now fast forward six months. In the happy case, I’m thrilled when these questions recur because they reconnect me to the ideas of this fascinating paper, which now appear richer through the lens of my intervening experiences. Much of the time, I simply feel grateful to still remember the details. But sometimes, I no longer find the paper very interesting; the questions just feel like a chore. They’ve become “orphan prompts”—[Avoid orphan spaced repetition memory prompts](https://notes.andymatuschak.org/z8QtbrR4cxDshTYBq3RCfwUVkXS8mSjRmAnqk).
 
-对我来说，最重要的维护类型涉及我不断变化的兴趣。我可能会偶然发现一篇迷人的论文，并写下几十张卡片，以帮助我内化细节。现在快进 6 个月。在快乐的情况下，当这些问题再次出现时，我很兴奋，因为它们将我与这篇迷人的论文的观点重新联系起来，现在通过我中间的经历，这些观点显得更加丰富。很多时候，我只是对仍然记得这些细节而感到感激。但有时，我不再觉得这篇论文非常有趣；这些问题只是感觉是个苦差事。它们已经成为「孤岛卡片」——[避免孤儿的间隔重复记忆提示](https://notes.andymatuschak.org/z8QtbrR4cxDshTYBq3RCfwUVkXS8mSjRmAnqk)。
+对我来说，最重要的维护类型涉及我不断变化的兴趣。我可能会偶然发现一篇迷人的论文，并写下几十张卡片，以帮助我内化细节。现在快进 6 个月。在快乐的情况下，当这些问题再次出现时，我很兴奋，因为它们将我与这篇迷人的论文的观点重新联系起来，现在通过我中间的经历，这些观点显得更加丰富。很多时候，我只是对仍然记得这些细节而感到感激。但有时，我不再觉得这篇论文非常有趣；这些问题只是感觉是个苦差事。它们已经成为「孤岛卡片」——[避免鼓励的间隔重复记忆卡片](https://notes.andymatuschak.org/z8QtbrR4cxDshTYBq3RCfwUVkXS8mSjRmAnqk)。
 
 One possible solution: [A “skip” mechanism may help spaced repetition memory system sessions remain emotionally connected](https://notes.andymatuschak.org/z4xgge5NF7AmCJKrsghgYmzaXKcM5hM8P8vnn).
 
