翻译 高质量的间隔重复记忆卡片最重要的属性是什么？

--- a/ToolsForThought/如何写出好卡片：利用间隔重复来创造理解.md
+++ b/ToolsForThought/如何写出好卡片：利用间隔重复来创造理解.md
@@ -629,7 +629,7 @@ Notice how I’ve broken the ingredient list down into many questions here, each
 
 Prompts are cheaper than you probably imagine. An easy prompt will consume 10–30 seconds across the entire first year of practice, and much less in each subsequent year. Until you’ve internalized that observation, try to adopt this rule of thumb: write more prompts than feels natural.
 
-卡片比你可能想象的要便宜。一张简单的卡片在整个第一年的练习中会花 10-30 秒的时间，而在随后的每一年则会少很多。在你内化这一观察结果之前，试着采用这一经验法则：编写超出感觉自然的卡片数量。
+卡片比你可能想象的要便宜。一张简单的卡片在整个第一年的练习中会花 10-30 秒的时间，而在随后的每一年则会少很多。在你内化这一观察结果之前，试着采用这一经验法则：编写超过觉得自然的数量的卡片。
 
 Now, prompts are cheap, but they’re not *free.* Besides their time cost, they have an emotional cost: no one wants to spend time reviewing a bunch of boring material they already know. So if you’re writing prompts for a subject that’s already quite familiar, you should use fewer prompts—not because it’s always safe to write coarser questions for familiar topics, but because there’s less marginal knowledge you need to capture.
 
