翻译 间隔重复记忆卡片应该简洁

--- a/ToolsForThought/高质量的间隔重复记忆卡片最重要的属性是什么？.md
+++ b/ToolsForThought/高质量的间隔重复记忆卡片最重要的属性是什么？.md
@@ -8,8 +8,8 @@
 
 正在编写的文本：
 
-- [间隔重复记忆卡片应该是简洁的](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)
-- [间隔重复记忆卡片通常应聚焦与一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)
+- [间隔重复记忆卡片应该简洁](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)
+- [间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)
 - 间隔重复记忆卡片应该从多个角度对思想进行编码
   - [间隔重复记忆卡片应将思想联系起来](https://notes.andymatuschak.org/z49EwwPL1CzKHTyLHXwJJH7hsciCg772Vm5WJ)
 - 间隔重复记忆卡片应该明确地产生一个具体的答案
