翻译 卡片必须明确说明他们所期望的答案的「形状」

--- a/ToolsForThought/间隔重复记忆卡片应该简洁.md
+++ b/ToolsForThought/间隔重复记忆卡片应该简洁.md
@@ -7,7 +7,7 @@
 例如，Wozniak（1999）给出了一个改进卡片的例子：
 
 > (之前)
-> 问：Aldus 在 1985 年用 PageMaker 发明了桌面出版。多年来，Aldus 几乎没有竞争，因此未能改进。然后位于丹佛的......吹了过去。PageMaker，现在属于 Adobe 公司，仍然是第 2 名。
+> 问：Aldus 于 1985 年用 PageMaker 发布了桌面版。Aldus 多年来没有什么竞争对手，因此未能提高。然后基于[...]的 Denver 就超过它了。现在由 Adobe 拥有的 PageMaker 仍然排名第二。
 > 答：Quark
 > (之后)
 > 问：PageMaker 输给了......
