翻译 间隔重复系统能力的限制因素是写出足够多的好卡片

--- a/ToolsForThought/在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解.md
+++ b/ToolsForThought/在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解.md
@@ -8,7 +8,7 @@
 
 - [间隔重复记忆卡片应该从多个角度对思想进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)，但填空卡只是抓住了一个角度。
 - [间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)，但填空卡通常是叙述性的散文，一般来说并不是那么聚焦。
-- [写自己的间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)，而制作填空卡则要省力得多。
+- [亲自编写间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)，而制作填空卡则要省力得多。
 - [间隔重复记忆卡片应该简洁](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)，但填空卡通常是叙述性的散文，其中包括许多与卡片的具体内容不一定相关的词语。
 - 填空卡通常有歧义问题，因为它们使用句法结构来暗示它们在问什么；参见[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)和[卡片必须明确说明他们所期望的答案的「形状」](https://notes.andymatuschak.org/zpunuHuSjwJtCMogLev1JxXg9V6pSjznwJM)
 
