--- a/ToolsForThought/学习别人的间隔重复记忆卡片通常是无效的.md
+++ b/ToolsForThought/学习别人的间隔重复记忆卡片通常是无效的.md
@@ -1,4 +1,4 @@
-# 学习另一个人的间隔重复记忆卡片通常是无效的
+# 学习别人的间隔重复记忆卡片通常是无效的
 
 原文：[Studying another person’s spaced repetition memory prompts is usually ineffective](https://notes.andymatuschak.org/z38fLX4H8oq9eXKnZH7wk8qDXfBLg2bxVyA2M)
 
@@ -8,4 +8,4 @@
 
 另请参阅：[助记媒介](https://notes.andymatuschak.org/z4rRX3qwSSJRsEkdXKwH2shamgHNeRthrMLiF)，它试图解决这个问题。
 
-有关文章：[写自己的间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)
+有关文章：[亲自编写间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)
