--- a/ToolsForThought/间隔重复记忆系统可用于加深概念理解.md
+++ b/ToolsForThought/间隔重复记忆系统可用于加深概念理解.md
@@ -4,7 +4,7 @@
 
 使用[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)最显而易见的方式是记忆简单事实，如名称、定义、数值常数等。绝大多数记忆系统的使用者似乎只将其用于这一目的。但是，间隔重复并不只对记忆简单事实有用。同样的机制可以用来深入理解复杂的材料，特别是如果你自己写卡片的话（[写自己的间隔重复记忆卡片有多重要？](https://notes.andymatuschak.org/z5TxQNCUTSAiTg42v7Ft6xASpnyiuvm6phAoJ)）。这种面向概念的卡片可能会在联系、影响、原因、结果上测试你。这些更广泛的想法并不天真地让人感觉像是可以记住的事实——但它们往往是可以记住的。除了记住这些概念性想法的好处外，以这种方式长期参与更高层次的关系可以使你与主题保持联系，并帮助你更深入地内化它。（相关文章：[助记媒介使读者与材料保持长期联系](https://notes.andymatuschak.org/z7tjqSxGsJ53tXsGkRpchsECWcMsW3sFUw86U)）
 
-[写好间隔重复记忆卡片很难](https://notes.andymatuschak.org/z3ntJ7w9C3uapYp1m3gy2EK6PN788guzEoUNN)；写出好的概念卡片则更难。用于编码抽象、概念性知识的技术并没有得到很好的理解或广泛的理解。欲了解更多，请参见[优质间隔重复记忆卡片最重要的属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)。特别相关：[间隔重复记忆卡片应该从多个角度对概念进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)。
+[写好间隔重复记忆卡片很难](https://notes.andymatuschak.org/z3ntJ7w9C3uapYp1m3gy2EK6PN788guzEoUNN)；写出好的概念卡片则更难。用于编码抽象、概念性知识的技术并没有得到很好的理解或广泛的理解。欲了解更多，请参见[高质量的间隔重复记忆卡片最重要的属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)。特别相关：[间隔重复记忆卡片应该从多个角度对概念进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)。
 
 这是对[许多人认为记忆对深刻的创造性工作并不重要](https://notes.andymatuschak.org/zD5zaKmvTFAAL3PTJGWzkAQr6CtoBCdoXBpM)的一个反驳。
 
